[project]
name = "tap-klaviyo"
version = "0.0.1"
description = "`tap-klaviyo` is a Singer tap for Klaviyo, built with the Meltano Singer SDK."
authors = [{ name = "Brooklyn Data" }]
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Klaviyo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2,<3",
    "singer-sdk~=0.42.1",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs>=1.1.1,<2",
]

[project.scripts]
tap-klaviyo = "tap_klaviyo.tap:TapKlaviyo.cli"

[dependency-groups]
dev = [
    { include-group = "test" }
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
ignore = ["DJ", "PD", "D102", "COM812", "ISC001", "FIX002"]
select = ["ALL"]

[tool.ruff.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.flake8-import-conventions.extend-aliases]
typing = "t"

[tool.ruff.per-file-ignores]
"tap_klaviyo/streams.py" = [
    "RUF012",  # mutable-class-default
]
"tests/*" = ["ANN201"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
    "ignore:Fields in transformed catalog but not in records:UserWarning",
    "ignore:No records were available to test:UserWarning",
    "ignore:No records returned in stream 'campaigns':UserWarning",
    "ignore:No records returned in stream 'events':UserWarning",
    "ignore:No records returned in stream 'flows':UserWarning",
    "ignore:No records returned in stream 'listperson':UserWarning",
    "ignore:No records returned in stream 'lists':UserWarning",
    "ignore:No records returned in stream 'profiles':UserWarning",
    "ignore:No records returned in stream 'templates':UserWarning",
]
