[project]
name = "tap-klaviyo"
version = "0.0.1"
description = "`tap-klaviyo` is a Singer tap for Klaviyo, built with the Meltano Singer SDK."
authors = [{ name = "Brooklyn Data" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Klaviyo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2,<3",
    "singer-sdk~=0.53.5",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
tap-klaviyo = "tap_klaviyo.tap:TapKlaviyo.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
    "mypy>=1.19.1",
    "ty>=0.0.12",
    "types-requests>=2.32.4.20260107",
]
test = [
    "pytest>=9",
    "singer-sdk[testing]",
]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["DJ", "PD", "D102", "COM812", "ISC001", "FIX002"]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tap_klaviyo/streams.py" = [
    "RUF012",  # mutable-class-default
]
"tests/*" = ["ANN201"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Fields in transformed catalog but not in records:UserWarning",
    "ignore:No records were available to test:UserWarning",
    "ignore:No records returned in stream 'campaigns':UserWarning",
    "ignore:No records returned in stream 'events':UserWarning",
    "ignore:No records returned in stream 'flows':UserWarning",
    "ignore:No records returned in stream 'listperson':UserWarning",
    "ignore:No records returned in stream 'lists':UserWarning",
    "ignore:No records returned in stream 'profiles':UserWarning",
    "ignore:No records returned in stream 'templates':UserWarning",
]
minversion = "9"
