[project]
name = "tap-klaviyo"
dynamic = [ "version" ]
description = "`tap-klaviyo` is a Singer tap for Klaviyo, built with the Meltano Singer SDK."
authors = [{ name = "Brooklyn Data" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Klaviyo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2,<3",
    "singer-sdk~=0.53.7",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
tap-klaviyo = "tap_klaviyo.tap:TapKlaviyo.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "typing" },
]
test = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    { include-group = "test" },
    "mypy>=1.20.1",
    "ty>=0.0.30",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling>=1.29.0,<2", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["DJ", "PD", "D102", "COM812", "ISC001", "FIX002"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tap_klaviyo/streams.py" = [
    "RUF012",  # mutable-class-default
]
"tests/*" = ["ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
addopts = [
    "-v",
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = ["tests"]
